--- a/src/assets/i18n/lang/es.json
+++ b/src/assets/i18n/lang/es.json
@@ -90,6 +90,8 @@
     "read-more": "Leer Mas",
     "see-event": "Ver Evento",
     "see-map": "Ver Mapa",
+    "see-filter": "Ver Filtros",
+    "hide-filter": "Ocultar Filtros",
     "edit-event": "Editar Evento",
     "editing-event" : "Editando evento",
     "general-info": "Información General",
