--- a/src/assets/i18n/lang/en.json
+++ b/src/assets/i18n/lang/en.json
@@ -90,6 +90,8 @@
     "read-more": "Read More",
     "see-event": "See Event",
     "see-map": "See Map",
+    "see-filter": "See Filters",
+    "hide-filter": "Hide Filters",
     "edit-event": "Edit Event",
     "general-info": "General Information",
     "like": "Like",
