--- a/src/assets/i18n/lang/en.json
+++ b/src/assets/i18n/lang/en.json
@@ -292,6 +292,10 @@
     "edit-event-header": "Edit event",
     "delete-event-header": "Delete event",
     "delete-event-content": "Are you sure to delete the event?",
+    "delete-translate-event-header": "Delete translate",
+    "delete-translate-event-eu-content": "Are you sure to delete the translation in Euskara?",
+    "delete-translate-event-es-content": "Are you sure to delete the translation in Spanish?",
+    "delete-translate-event-en-content": "Are you sure to delete the translation in English?",
     "create-service-header": "Create service",
     "edit-service-header": "Edit service",
     "delete-service-header": "Delete service",
