--- a/src/assets/i18n/lang/es.json
+++ b/src/assets/i18n/lang/es.json
@@ -296,6 +296,10 @@
     "edit-event-header": "Editar evento",
     "delete-event-header": "Eliminar evento",
     "delete-event-content": "¿Estas seguro de eliminar el evento?",
+    "delete-translate-event-header": "Elminar traducción",
+    "delete-translate-event-eu-content": "¿Estas seguro de eliminar la traducción en Euskara?",
+    "delete-translate-event-es-content": "¿Estas seguro de eliminar la traducción en Castellano?",
+    "delete-translate-event-en-content": "¿Estas seguro de eliminar la traducción en Inglés?",
     "create-service-header": "Crear servicio",
     "edit-service-header": "Editar servicio",
     "delete-service-header": "Eliminar servicio",
