--- a/src/assets/i18n/lang/eu.json
+++ b/src/assets/i18n/lang/eu.json
@@ -295,6 +295,10 @@
     "edit-event-header": "Ekintza aldatu",
     "delete-event-header": "Ekintza ezabatu",
     "delete-event-content": "Ziur zaude ekintza ezabatzeaz?",
+    "delete-translate-event-header": "Itzulpena ezabatu",
+    "delete-translate-event-eu-content": "Ziur zaude Euskarazko itzulpena ezabatzeaz?",
+    "delete-translate-event-es-content": "Ziur zaude Gaztelerazko itzulpena ezabatzeaz?",
+    "delete-translate-event-en-content": "Ziur zaude Ingelesezko itzulpena ezabatzeaz?",
     "create-service-header": "Zerbitzua sortu",
     "edit-service-header": "Zerbitzua aldatu",
     "delete-service-header": "Zerbitzua ezabatu",
