--- a/src/assets/i18n/lang/eu.json
+++ b/src/assets/i18n/lang/eu.json
@@ -90,6 +90,7 @@
     "read-more": "Gehiago Irakurri",
     "see-event": "Ekintza Ikusi",
     "see-map": "Mapa Ikusi",
+    "hide-map": "Mapa Ezkutatu",
     "see-filter": "Filtroak Ikusi",
     "hide-filter": "Filtroak Ezkutatu",
     "edit-event": "Ekintza Aldatu",
