--- a/src/assets/i18n/lang/es.json
+++ b/src/assets/i18n/lang/es.json
@@ -90,6 +90,7 @@
     "read-more": "Leer Mas",
     "see-event": "Ver Evento",
     "see-map": "Ver Mapa",
+    "hide-map": "Ocultar Mapa",
     "see-filter": "Ver Filtros",
     "hide-filter": "Ocultar Filtros",
     "edit-event": "Editar Evento",
