--- a/src/assets/i18n/lang/en.json
+++ b/src/assets/i18n/lang/en.json
@@ -98,6 +98,7 @@
     "like": "Like",
     "comment": "Comment",
     "share": "Share",
+    "entries": "Tickets",
     "free": "Free"
   },
   "application":
