--- a/src/assets/i18n/lang/es.json
+++ b/src/assets/i18n/lang/es.json
@@ -99,6 +99,7 @@
     "like": "Me gusta",
     "comment": "Comentar",
     "share": "Compartir",
+    "entries": "Entradas",
     "free": "Gratis"
   },
   "application":
