--- a/src/assets/i18n/lang/eu.json
+++ b/src/assets/i18n/lang/eu.json
@@ -99,6 +99,7 @@
     "like": "Atsegin dut",
     "comment": "Iruzkina utzi",
     "share": "Partekatu",
+    "entries": "Sarrerak",
     "free": "Doan"
 
   },
