--- a/src/assets/i18n/lang/en.json
+++ b/src/assets/i18n/lang/en.json
@@ -25,6 +25,7 @@
   "details-route": "details",
   "region-route": "region",
   "user-route": "user",
+  "profile-route": "profile",
   "map-route": "map",
   "all-route": "all",
   "admin-route": "admin",
@@ -114,6 +115,7 @@
     "repeat-password": "Repeat password",
     "about-yourself": "About yourself",
     "privacity-consent": "Privacity consent",
+    "use-consent": "Use consent",
     "sign-up-title": "Sign up",
     "sign-up-sign-in-link": "Do you already have an account? Sign in!",
     "sign-up": "Sign up",
