--- a/src/assets/i18n/lang/es.json
+++ b/src/assets/i18n/lang/es.json
@@ -25,6 +25,7 @@
   "details-route": "detalles",
   "region-route": "region",
   "user-route": "usuario",
+  "profile-route": "perfil",
   "map-route": "mapa",
   "all-route": "todos",
   "admin-route": "admin",
@@ -115,6 +116,7 @@
     "repeat-password": "Repite la contraseña",
     "about-yourself": "Acerca de ti",
     "privacity-consent": "Consentimiento de privacidad",
+    "use-consent": "Consentimiento de uso",
     "sign-up-title": "Regístrate",
     "sign-up-sign-in-link": "¿Ya tienes tu cuenta? ¡Inicia sesión!",
     "sign-up": "Regístrate",
